Bug 1823292 - Fix calendar summary dialog layout issues. r=aleca
Differential Revision: https://phabricator.services.mozilla.com/D172951

--HG--
extra : rebase_source : ab6899693dfc0f15c4acf325bc4dadb3af7273b1
extra : amend_source : 13504a17540ac118dffe6e4729fab76bf74b4328

--- a/calendar/base/themes/common/calendar-item-summary.css
+++ b/calendar/base/themes/common/calendar-item-summary.css
@@ -20,10 +20,19 @@
   padding-top: 0;
   vertical-align: baseline;
   width: 100%;
+  max-width: 0;
+}
+
+.calendar-summary-table td.item-location {
+  vertical-align: top;
 }
 
 .calendar-summary-table .item-location-link > label {
   margin-inline: 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  width: 100%;
 }
 
 .calendar-summary-table .item-organizer-cell {
